<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Darwino - News Reader</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="refresh">Refresh</string>
    <string name="allread">Mark All Read</string>
    <string name="allunread">Mark All Unread</string>
    <string name="searchnews">Search</string>
    <string name="switchlocal">Switch to Local</string>
    <string name="switchremote">Switch to Remote</string>
    <string name="eraselocdata">Erase Local Data</string>
    <string name="synchronize">Synchronize Data</string>
    <string name="createlocaldb">Create Local Database</string>
    <string name="deletelocaldb">Delete Local Database</string>
    <string name="swipedb">Swipe Local Database</string>
    <string name="switchweb">Switch To Web</string>
    <string name="settings">Settings...</string>
    
</resources>
